syntax = "proto3";

package user;

service UserService {
  rpc FindOneByEmail(FindOneByEmailRequest) returns (FindOneByEmailResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message FindOneByEmailRequest {
  string email = 1;
}

message FindOneByEmailResponse {
  string id = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  string id = 1;
}